packages/svelte/tests/validator/samples/default-export-indirect/input.svelte
<script module>
    let answer = 42;
    export { answer as default};
</script>